
  Thus, if in a filter defined by
       :custom_filter => {'No' => 'null', 'Yes' => 'not null', '1' => 1, '2' => '2', '3' => '3'}
  values '1', '2' and 'No' are selected (in a multi-select mode),  this will result in the following SQL:

      ( table.field IN ( '1', '2' ) OR table.field IS NULL )



* Configuration file wice_grid_config.rb is removed from the plugin lib directory, the config is now
  an initializer copied to config/initializers/ by task :copy_config_to_initializers.

* Updated default styles
* Cleaned up and refactored javascript code
* Quite some number of bugs fixed

== 0.4

* Detached filters: it has become possible to detach filters and place them anywhere on the page, before or after the grid.
  Read section "Detached Filters" in the README.

*  More control over Submit and Reset buttons.
   Two new view helpers: submit_grid_javascript returns javascript which applies current filters; reset_grid_javascript returns javascript
   which resets the grid, clearing the state of filters. This allows to create your own Submit and Reset buttons anywhere on the page  
   with the help of button_to_function:

     <%= button_to_function "Submit", submit_grid_javascript(@grid) %>
     <%= button_to_function "Reset",  reset_grid_javascript(@grid) %>

   To complement this feature there are two new parameters in the +grid+ helper :hide_submit_button and :hide_reset_button which 
   hide default buttons in the grid if set to true. Together with detached filter this allows to completely 
   get rid of the filter row with filters and icons.

* erb_mode option has been moved to the grid view helper - watch for warnings and remove the parameter from initialize_grid if you have it there.

* helper include_wice_grid_assets will require WiceGrid javascripts and stylesheets on demand, that is, only if at least one initialize_grid 