@@ -78,9 +78,10 @@ To use case-insensitive matching in Postgresql 'ILIKE' has to be used, but this 
 
 
 
-* Configuration file wice_grid_config.rb is removed from the plugin lib directory, the config is now
+* Configuration file wice_grid_config.rb is now
   an initializer copied to config/initializers/ by task :copy_config_to_initializers.
 
+* Parameter :allow_showing_all_records moved from initialize_grid  to the view helper
 * Updated default styles
 * Cleaned up and refactored javascript code
 * Quite some number of bugs fixed
